Bug 91185 - UI: Crash after visiting Tools Options Appearance
Summary: UI: Crash after visiting Tools Options Appearance
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-09 13:15 UTC by Gordo
Modified: 2015-05-20 06:26 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Backtrace of crash (11.25 KB, text/plain)
2015-05-19 09:39 UTC, Buovjaga
Details
backtrace from the "throw" (3.56 KB, text/plain)
2015-05-19 18:39 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-05-09 13:15:09 UTC
While I was in Writer,
Tools -> Options -> LibreOfficeDev -> Appearance and Cancel
Result:
Program has stopped working.  I had to end the process.

Tried to get a backtrace with WinDbg but couldn't get anything except while it was running, LO showed this dialogue:

LibreOfficeDev 5.0 - Fatal Error
Unknown SEH Exception

Visiting Tools -> Options -> LibreOfficeDev -> Appearance and Cancel in Calc got me this:

Assertion failed!

Program:  LibreOfficeDev 5\program\vcllo.dll
File:  C:/cygwin/home/tinderbox/master/vcl/source.../layout.cxx
Line:  1390

Expression:  GetChildCount() == 2

Version: 5.0.0.0.alpha1+
Build ID: 520400e8faf8e7346d16f34babb6258033673e12
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-08_12:19:40
Comment 1 m.a.riosv 2015-05-09 14:06:54 UTC
I can't reproduce with:
Win7x64Ultimate
Version: 5.0.0.0.alpha1+ (x64)Build ID: 4048311aae6993357c2d0be1f1968a8c57dd4e85
         TinderBox: Win-x86_64@42, Branch:master, Time: 2015-05-09_01:12:23
Comment 2 raal 2015-05-12 18:09:13 UTC
Hello Gordo,
Thank you for reporting the bug. vclptr issue, fixed now
Version: 5.0.0.0.alpha1+
Build ID: ceb6f473837261f2a6e43e028ce9da3daccc2f6c
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-11_13:16:38

Version: 5.0.0.0.alpha1+
Build ID: ddb3c4531c657cda6ae20dd950020cea1d12ba2e
TinderBox: Win-x86@42, Branch:master, Time: 2015-05-10_23:05:48
Comment 3 Gordo 2015-05-18 23:22:30 UTC
It's back.

Windows Vista 64
Version: 5.0.0.0.alpha1+
Build ID: 60fb87cf6cfcbdb1a7ece00e8a2e9d1112903ed0
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-18_14:12:34
Comment 4 Buovjaga 2015-05-19 09:39:37 UTC
Created attachment 115705 [details]
Backtrace of crash

I managed to get a bt.

I first had to go to Debug - Event filters and disable Break instruction exception, because Windbg kept tripping over it immediately after attaching to LibreOffice.

Then I enabled Unknown exception in the filters.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+
Build ID: 158b50763962f66515062300e265839828463efa
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-19_00:28:31
Locale: fi-FI (fi_FI)
Comment 5 Philippe Jung 2015-05-19 13:46:28 UTC
Don't crash on linux fresh git master build, has to be checked with fresh win build
Comment 6 Terrence Enger 2015-05-19 18:39:39 UTC
Created attachment 115731 [details]
backtrace from the "throw"

If I have counted exceptions correctly, the backtrace is from the last
first chance exception before LibreOffice displays the error message.
Comment 7 Terrence Enger 2015-05-19 18:43:09 UTC
The backtrace attached in comment 3 is from LibreOffice
    Version: 5.0.0.0.alpha1+
    Build ID: 9de1d53a2ce3ee7036b4688b373db7b2235af4d9
    TinderBox: Win-x86@39, Branch:master, Time: 2015-05-14_00:07:12
    Locale: en-CA (en_CA)
running on Windows Vista.
Comment 8 Michael Meeks 2015-05-19 20:06:13 UTC
Thanks for the report; fixed.
Comment 9 Commit Notification 2015-05-19 20:06:59 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1b1f9537a299e5cdb4bd824513b41ee903b4bda

tdf#91185 - appearance settings lifecycle fix.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2015-05-20 06:26:22 UTC
No crash anymore.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+
Build ID: 2a886adb500fe481e1ea61573551b19e99c55b8b
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-20_00:31:51
Locale: fi-FI (fi_FI)