tdf#91185 - appearance settings lifecycle fix.

Change-Id: I4efe8e68419a3d878acf3c4eb741239794b26d85